fixed bugs
fixed the picture/nav overlap on the main nav page, not the second nav page

--- a/style.css
+++ b/style.css
@@ -133,15 +133,16 @@
   }
 
   .cplspace {
+    position:relative;
     width: 100%;
     height: 100%;
     background: clear;
   }
   .prof {
     position: relative;
-    top: 100px;
-    width: 90%;
-    height: 30%;
+    width: 400px;
+    top:100px;
+    height: 60%;
     background: clear;
     margin: 0 auto;
   }
@@ -159,56 +160,55 @@
     background-repeat: no-repeat;
   }
   .profnam {
+    position:relative;
     margin: 0 auto;
     height: 100px;
-    width: 100%;
-    background: clear;
+    width: 400px;
   }
   #proftt1 {
+    position:relative;
     margin: 0 auto;
     text-align: center;
     font-size: 40px;
   }
   #proftt2 {
+    position:relative;
     margin: 0 auto;
     text-align: center;
     font-size: 30px;
   }
   .profdd {
+    position:relative;
     margin: 0 auto;
     text-align: center;
-    font-size: 20px;
+    font-size: 20px;  
   }
   .cpl {
-    position: relative;
+    position: absolute;
     width: 200px;
-    height: 60%;
+    height: 400px;
     background: clear;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto;
+    margin:0 auto;  
+    top:380px;
+    left: 50%;
+    transform: translate(-50%, 0%);
   }
   #cpl {
     position: relative;
     width: 200px;
-    height: 60%;
+    height: 400px;
     background: clear;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto;
-    opacity: 1;
-
+    margin:0 auto;  
+    top:-160px;
   }
   .cplw {
-    width: 260px;
+    width: 200px;
     height: auto;
   }
   .clb {
     width: 200px;
     height: 50px;
-    margin: 30px;
+    margin-top: 30px;
     background: white;
     border-radius: 15px;
     border: 1px solid black;
@@ -220,7 +220,7 @@
     position: relative;
     width: 200px;
     height: 50px;
-    margin: 30px;
+    margin-top: 30px;
     background: clear;
     color: white;
     border-radius: 15px;
@@ -234,7 +234,7 @@
     position: fixed;
     width: 200px;
     height: 50px;
-    margin: 30px;
+    margin-top: 0px;
     background: black;
     border-radius: 15px;
     opacity: 0.7;
@@ -244,7 +244,7 @@
     position: fixed;
     width: 200px;
     height: 50px;
-    margin-left: 30px;
+    margin-top: 30px;
     background: black;
     border-radius: 15px;
     opacity: 0.7;
@@ -254,7 +254,7 @@
     position: fixed;
     width: 200px;
     height: 50px;
-    margin-left: 30px;
+    margin-top: 30px;
     background: black;
     border-radius: 15px;
     opacity: 0.7;
@@ -264,7 +264,7 @@
     position: fixed;
     width: 200px;
     height: 50px;
-    margin-left: 30px;
+    margin-top: 30px;
     background: black;
     border-radius: 15px;
     opacity: 0.7;
